# SPDX-FileCopyrightText: 2023 German Aerospace Center (DLR)
# SPDX-License-Identifier: Apache-2.0

[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rtlola_ros2_monitor"
path = "src_generated/main.rs"  # Specify the path to your source fil

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
regex = "1.5"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
convert_case = "0.6.0"

[dependencies]
rtlola-interpreter = "0.10.1"
rtlola-interpreter-macros = "0.1.0"
serde = { version = "1.0.145", features = ["derive"] }
bincode = "1.3.3"
byteorder = "1.3.4"
r2r = "0.8.3"
futures = "0.3.19"
tokio = { version = "1.28.2", features = ["full"] }